fix/feat: modified the Table05ReportsExpandingRows expanded rows to now wrap manage report buttons; replaced recreate text with a square-plus-solid fontAwesome icon

--- a/styles/common/Table05ReportsExpandingRows.module.css
+++ b/styles/common/Table05ReportsExpandingRows.module.css
@@ -110,7 +110,26 @@
 .btnDownload:hover .faDownload {
   background-image: url("/images/buttons/reports/download-solid-green.svg");
 }
+.btnRecreate {
+  background-color: transparent;
+  cursor: pointer;
+  padding: 0.25rem 1rem;
+  border: none;
+}
+.faSquarePlus {
+  display: inline-block;
+  width: 1.25rem;
+  height: 1.25rem;
+  background-image: url("/images/buttons/reports/square-plus-solid.svg");
+  background-size: contain;
+  background-repeat: no-repeat;
+  transition: background-image 0.2s ease-in-out;
+  border: none;
+}
 
+.btnRecreate:hover .faSquarePlus {
+  background-image: url("/images/buttons/reports/square-plus-solid-blue.svg");
+}
 .btnDelete {
   background-color: transparent;
   cursor: pointer;
@@ -139,14 +158,23 @@
 .tbodyExpandedRow tr {
   margin: 0;
   padding: 0;
+  display: flex;
+  width: 90%;
+  justify-content: space-between;
 }
 
 .divExpandedRowColumnLeft {
-  width: 6rem;
+  width: 5rem;
   padding: 0;
 }
 .divExpandedRowColumn {
-  width: 7rem;
+  flex: 1;
   padding: 0;
   text-align: center;
+  /* background-color: blue; */
+}
+
+.divExpandedManageReportsButtons {
+  display: inline;
+  /* background-color: green; */
 }
